<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <TextView android:id="@+id/textview1"
    android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/volumefactor" android:layout_height="wrap_content"></TextView>
  <SeekBar android:id="@+id/seekBar1"
    android:layout_height="wrap_content" android:layout_width="match_parent"
    android:max="150" android:layout_marginLeft="15dip" android:layout_marginRight="15dip"></SeekBar>
  <TextView android:layout_gravity="right"
    android:id="@+id/textView2" android:layout_width="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium" android:text="textView2"
    android:layout_height="wrap_content"></TextView>
  <TextView android:id="@+id/textView3"
     android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
     android:text="@string/sound_options" android:layout_height="wrap_content"></TextView>
  <CheckBox android:text="@string/use_phone_mic"
	  android:id="@+id/checkBox1" android:layout_width="wrap_content"
	  android:layout_height="wrap_content"></CheckBox>
  <CheckBox android:text="@string/speakerphone_echo_fix"
   	  android:id="@+id/checkBox2" android:layout_width="wrap_content" 
   	  android:layout_height="wrap_content"></CheckBox>
  <Button android:layout_width="wrap_content"
  	  android:id="@+id/button1" android:layout_gravity="center"
  	  android:layout_height="wrap_content" android:text="@android:string/ok"></Button>
</LinearLayout>
