<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView android:layout_height="wrap_content" android:text="@string/cpu_governor"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:id="@+id/TextView01" android:layout_width="wrap_content"></TextView>
	<Spinner android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/spinner1"
		android:layout_marginLeft="10dip" android:layout_marginRight="10dip"></Spinner>
	<TextView android:layout_height="wrap_content" android:text=""
		android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView6"
		android:layout_width="wrap_content"></TextView>
	<TextView android:layout_height="wrap_content" android:text="@string/min_fre"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:id="@+id/textView2" android:layout_width="wrap_content"></TextView>
	<SeekBar android:layout_height="wrap_content" android:id="@+id/seekBar1"
		android:layout_width="match_parent" android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"></SeekBar>
	<TextView android:layout_height="wrap_content" android:text="TextView"
		android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView4"
		android:layout_width="wrap_content" android:layout_gravity="right"></TextView>
	<TextView android:layout_height="wrap_content" android:text="@string/max_fre"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:id="@+id/textView3" android:layout_width="wrap_content"></TextView>
	<SeekBar android:layout_height="wrap_content" android:id="@+id/seekBar2"
		android:layout_width="match_parent" android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"></SeekBar>
	<TextView android:layout_height="wrap_content" android:text="TextView"
		android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView5"
		android:layout_width="wrap_content" android:layout_gravity="right"></TextView>
	<Button android:id="@+id/button1" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:layout_gravity="center"
		android:text="@android:string/ok"></Button>
</LinearLayout>
